created the comedian events endpoint
